--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-json-pretty": "^2.2.0",
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "react-spinners": "^0.10.6",
     "web-vitals": "^0.2.4"
